--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,7 +2,6 @@
 @import "./base/main.less";
 @import "./components/main.less";
 @import "./layout/main.less";
-@import "./page/main.less";
 @import "./functions.less";
 @import "./mixin.less";
 
@@ -15,4 +14,4 @@
 
 
 //rewrite base color
-@base-color: #6292f0;
+@base-color: black;
