--- a/src/less/mixin.less
+++ b/src/less/mixin.less
@@ -1,3 +1,4 @@
 @modules:"../../node_modules/";
-@import "@{modules}rsuite-table/lib/less/index.less";
+@import '@{modules}rsuite-table/lib/less/index.less';
+@import '@{modules}rsuite-table/lib/less/index.less';
 @import '@{modules}rsuite-theme/dist/less/rsuite.less';
